tests/baselines/reference/templateStringWithEmbeddedInstanceOfES6.errors.txt
templateStringWithEmbeddedInstanceOfES6.ts(1,16): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.


==== templateStringWithEmbeddedInstanceOfES6.ts (1 errors) ====
    var x = `abc${ "hello" instanceof String }def`;
                   ~~~~~~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.